<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GULPS2GOV3</string>
    <string name="action_settings">Settings</string>
    <string name="welcomeTitle">Welcome to Gulps to Go </string>
    <string name="welcomeSubText1">Would you like to:</string>
    <string name="welcomeSubText2">OR</string>
    <string name="welcomeTextButton1">Create a new patient record</string>
    <string name="welcomeTextButton2">Load a previous patient</string>
    <string name="detailsTitle">Enter in patient details here</string>
    <string name="detailsID">Patient ID:</string>
    <string name="detailsName">Patients Name:</string>
    <string name="detailsDOB">Date of Birth:</string>
    <string name="detailsGender">Gender:</string>
    <string name="detailsNotes">Additional Notes:</string>
    <string name="detailsHint">Click to enter text here</string>
    <string-array name="arrayGender">
        <item >Male</item>
        <item >Female</item>
    </string-array>
    <string name="promptGender">Select a Gender</string>
    <string name="detailsButton">Done</string>
    <string name="patientButton1">Edit Patient Details</string>
    <string name="patientButton2">Start a new session</string>
    <string name="patientButton3">View a previous session</string>
    <string name="patientButton4">Start a new patient</string>
    <string name="patientButton5">Load a different patient</string>
    <string name="patientButton6">Connect to a Bluetooth Device</string>
    <string name="patientButton7">Disconnect Bluetooth</string>
    <string name="loadSessionHeader">Pan across to view data</string>
    <string name="loadSessionTitle">Session Number:</string>
    <string name="loadSessionDate">Date: 14/02/2013</string>
    <string name="loadSessionTime">Time: 09:33:24</string>
    <string name="loadSessionType">Type of Swallow: wet</string>
    <string name="newSessionTitle">New Session</string>
    <string name="newSessionButton1">Start</string>
    <string name="newSessionButton2">Pause</string>
    <string name="newSessionButton3">Resume</string>
    <string name="newSessionButton4">Stop</string>
    <string name="newSessionButton5">Restart</string>
    <string name="newSessionButton6">Save</string>
    <string name="saveTitle">Save at this Location:</string>
    <string name="saveLocation">Save Location:</string>
    <string name="saveButton3">Save at this location</string>
    <string name="saveSaveHeader">Select a location to save to</string>
    <string name="saveLoadHeader">Select a file to load</string>
    <string name="imageDescription"> </string>
    <string name="pausedText">Graph is paused</string>
    <string name="titleGraphFragment">Impedance Measurement Plot</string>
    <string name="dialogHeader">What type of swallowing is being done?</string>
    <string name="dialogSubHeader">For example: dry, wet, forced</string>
    <string name="defaultDatePickerTitle">Select a Date</string>
    <string name="detailsDateButtonText">Click to set a date</string>
    <string name="bluetoothHeaderString">Bluetooth Status:</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="graphButton1">Rotate Graph</string>
    <string name="patientButton8">Export patient to dropbox</string>
    <string name="saveButton1">SD Card Files</string>
    <string name="saveButton2">Dropbox Files</string>
    <string name="dbxSaveText">Session data will be saved at Dropbox/Apps/GULPS2GO/patient_name</string>
    <string name="dbxSaveButton">Save to dropbox</string>
    <string name="dbxLoadButton">Load From dropbox</string>
    <string name="loadSessionNew">Load a Different Session</string>
    
</resources>