<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"    >
    <TableRow  
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"   >
		    <TextView
		        android:text="@string/detailsID"     >
		    </TextView>
		    <EditText
		        android:id="@+id/editID" 
		        android:hint="@string/detailsHint"    >		        
		    </EditText>
    </TableRow>
	<TableRow 
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:padding="5dip"   >
		    <TextView
		        android:text="@string/detailsName"     >
		    </TextView>
		    <EditText
		        android:id="@+id/editName" 
		        android:hint="@string/detailsHint"    >		        
		    </EditText>
	</TableRow>
	<TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" > 
	    <TextView
	        android:text="@string/detailsDOB"
	        android:layout_gravity="center_vertical"      >        
	    </TextView>
	    <Button
	        android:id="@+id/datePickerButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/detailsDateButtonText"
	        android:onClick="detailsDone"   >
	    </Button>
	    
    </TableRow>
	<TableRow  
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"   >
		    <TextView
		        android:layout_gravity="center_vertical"
		        android:text="@string/detailsGender"     >
		    </TextView>
		    <Spinner
	        android:id="@+id/spinnerGender"
	        android:entries="@array/arrayGender"
	        android:prompt="@string/promptGender"     >
	    	</Spinner>
	</TableRow>
	<TableRow 
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:padding="5dip"   >
		    <TextView
		        android:text="@string/detailsNotes"     >
		    </TextView>
		    <EditText
		        android:id="@+id/editNotes" 
		        android:hint="@string/detailsHint"    >		        
		    </EditText>
	</TableRow>
	<TableRow
	    android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:padding="5dip"
        android:gravity="center"   >
		    <Button
		        android:id="@+id/detailsButton1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/detailsButton"
		        android:onClick="detailsDone"     >		        
		    </Button>
    </TableRow>
		        
</TableLayout>