<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/welcomeTitle"
        android:textSize="35sp"        >
    </TextView>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/welcomeSubText1"
        android:textSize="25sp"        >
    </TextView>
    <Button
        android:id="@+id/welcomeButton1"
         android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/welcomeTextButton1"
        android:onClick="welcomeEvent"
        android:textSize="20sp"        >
    </Button>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/welcomeSubText2"
        android:textSize="25sp"        >
    </TextView>
    <Button
        android:id="@+id/welcomeButton2"
         android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/welcomeTextButton2"
        android:onClick="welcomeEvent"
        android:textSize="20sp"        >
    </Button>
</LinearLayout>