<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/dbxSaveDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:text="@string/dbxSaveText"
        android:textSize="14sp"                >        
    </TextView>
    <Button 
		android:id="@+id/btSDFiles"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:layout_below="@id/dbxSaveDialog"
        android:layout_centerInParent="true"
       	android:layout_gravity="center_horizontal"
       	android:padding="15dp"
		android:text="@string/saveButton1"
		android:onClick="dbxSaveEvent"    >	        
    </Button>
    <Button
        android:id="@+id/dbxSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btSDFiles"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:text="@string/dbxSaveButton"
        android:onClick="dbxSaveEvent"        
        android:visibility="visible"        >        
    </Button>
	
    <Button
        android:id="@+id/dbxLoadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btSDFiles"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:text="@string/dbxLoadButton"
        android:onClick="dbxLoadEvent"
        android:visibility="gone"       >        
    </Button>

</RelativeLayout>